[package]
name = "themisfuzzer-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
#https://github.com/Nafets00/LibAFL.git
libfuzzer-sys = { git = "https://github.com/AFLplusplus/LibAFL.git", features = [], package = "libafl_libfuzzer" }
themis-pbft = {path = "/home/stefan/themis/themis-pbft"}
themis-patch-pbft = {path = "/home/stefan/ThemisPatch/themis-patch-pbft"}
once_cell = "1.18.0"
rand = "0.8"
tokio = { version = "1", features = ["full"] }

[dependencies.themisfuzzer]
path = ".."

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
